--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,8 +26,8 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
-    --font-sans: "Inter", sans-serif;
-    --font-mono: "Inter", monospace;
+    --font-sans: 'Inter', sans-serif;
+    --font-mono: 'Inter', monospace;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -35,7 +35,7 @@
     --chart-5: 27 87% 67%;
   }
 
-  [data-theme="dark"] {
+  [data-theme='dark'] {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
